// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileConfig - const command > should error on same-scope redefinition 1`] = `
[
  {
    "blockIndex": 0,
    "kind": "exec",
    "line": 3,
    "message": "Cannot redefine constant "NAME" in the same scope",
  },
]
`;

exports[`compileConfig - const command > should error on unknown constant 1`] = `
[
  {
    "blockIndex": 0,
    "kind": "exec",
    "line": 3,
    "message": "Unknown constant: UNKNOWN",
  },
  {
    "blockIndex": 0,
    "kind": "exec",
    "line": 4,
    "message": "Cannot set: data stack is empty",
  },
]
`;
